--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap" rel="stylesheet" />
 
-		<link rel="icon" href="./favicons/favicon-16x16.png">
+		<link rel="icon" href="./favicons/favicon-16x16.icon">
 		<link rel="stylesheet" href="./src/css/reset.css" />
 		<link rel="stylesheet" href="./src/css/estilos.css" />
 		<link rel="stylesheet" href="./src/css/responsivo.css" />
